--- a/obsidian-realtime-collaboration/.github/workflows/version-bump.yml
+++ b/obsidian-realtime-collaboration/.github/workflows/version-bump.yml
@@ -55,8 +55,8 @@ jobs:
         uses: peter-evans/create-pull-request@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore: bump version to $(node -p "require('./package.json').version")"
-          title: "chore: bump version to $(node -p "require('./package.json').version")"
+          commit-message: "chore: bump version to $(node -p \"require('./package.json').version\")"
+          title: "chore: bump version to $(node -p \"require('./package.json').version\")"
           body: |
             ## Version Bump
             
